# wellschematicspy

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: index.md
docs/examples/: Create_Schema_Simple.ipynb
docs/tutorial/: 1-Intro.md
docs/tutorial/first_steps/: Create_Schema_Simple.md
examples/.ipynb_checkpoints/: Create_Schema_Simple-checkpoint.ipynb
examples/1-Intro/: index.html
examples/Create_Schema_Simple/: index.html
search/: search_index.json
tutorial/first_steps/: output_5_0.svg:Zone.Identifier
tutorial/first_steps/Create_Schema_Simple/: index.html
wellschematicspy/: __init__.py  models.py  schematics.py
