[tool.poetry]
name = "wellschematicspy"
version = "v0.1.0"
description = "Oil&Gas Well Schematics definition and plot"
authors = ["Santiago Cuervo <scuervo91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
notebook = "^6.3.0"
mkdocs-material = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
